# MyEngine

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CMakeLists_option1.txt  CMakeLists_option2.txt  Makefile  README.md  app  cmake_install.cmake  compile_commands.json
include/glad/: gl.h
src/: Cubemap.hpp  EngineManager.hpp  GameObject.hpp  const_h.hpp  gl_common.hpp  main.cpp  mesh_h.hpp  shader_h.hpp  texture_2d_h.hpp  types_h.hpp
src/animation/: Animation.cpp  Animation.hpp  Animator.cpp  Animator.hpp  Bone.cpp  Bone.hpp  BoneInfo.hpp
src/camera/: Camera.hpp
src/components/: AnimationComponent.hpp  CameraComponent.hpp  CameraController.hpp  CameraControllerComponent.hpp  CameraFollowComponent.hpp  DirectionalLightComponent.hpp  LightComponent.hpp  LightManager.hpp  LightingPresets.hpp  Material.hpp  MaterialComponent.hpp  MaterialPresets.hpp  Mesh.hpp  MeshComponent.hpp  MeshFactory.hpp  MeshIndexed.hpp  MeshRenderer.hpp  MeshRendererIndexed.hpp  Model.hpp  ModelTextureLoader.hpp  NameComponent.hpp  ParentComponent.hpp  Physics.hpp  PhysicsComponent.hpp  PlayerControllerComponent.hpp  PointLightComponent.hpp  RenderComponent.hpp  SceneComponent.hpp  SkeletonComponent.hpp  SpotLightComponent.hpp  Transform.hpp  TransformComponent.hpp
src/ecs/: ComponentArray.hpp  ComponentManager.hpp  ComponentMask.hpp  Entity.hpp  EntityManager.hpp  Input.hpp  MeshComponent.hpp  System.hpp  Tag.hpp  World.hpp
src/resources/: Cubemap.hpp  Framebuffer.hpp  ModelLoader.hpp  PointShadowMap.hpp  ResourceManager.hpp  ShadowMap.hpp  shader_h.hpp  texture_2d_h.hpp
(+518 files in other folders)
